--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -6,23 +6,36 @@
 -->
 <ion-header>
   <ion-navbar>
-    <ion-title>login</ion-title>
+    <ion-title center>Login</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding>
-  <form (ngSubmit)="login()" #loginForm="ngForm">
-    <ion-list>
-      <ion-item>
-        <ion-input type="text" placeholder="E-mail" [(ngModel)]="form.email" name="name"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-input type="password" placeholder="Password" [(ngModel)]="form.password" name="password"></ion-input>
-      </ion-item>
-    </ion-list>
-    <button ion-button block [disabled]="!loginForm.form.valid" class="log-in-btn">Log In
+  <form [formGroup]="loginForm" (submit)="login()" novalidate>
+
+    <ion-item>
+      <ion-label stacked>Email</ion-label>
+      <ion-input formControlName="email" type="email" placeholder="Your email address" 
+        [class.invalid]="!loginForm.controls.email.valid && loginForm.controls.email.dirty"></ion-input>
+    </ion-item>
+    <ion-item class="error-message" 
+      *ngIf="!loginForm.controls.email.valid  && loginForm.controls.email.dirty">
+      <p>Please enter a valid email.</p>
+    </ion-item>
+
+    <ion-item>
+      <ion-label stacked>Password</ion-label>
+      <ion-input formControlName="password" type="password" placeholder="Your password" 
+        [class.invalid]="!loginForm.controls.password.valid && loginForm.controls.password.dirty"></ion-input>
+    </ion-item>
+    <ion-item class="error-message" 
+      *ngIf="!loginForm.controls.password.valid  && loginForm.controls.password.dirty">
+      <p>Your password needs more than 6 characters.</p>
+    </ion-item>
+
+    <button ion-button block type="submit" [disabled]="!loginForm.valid">
+      Login
     </button>
-    <div padding class="error" *ngIf="error">
-      <p>{{error}}</p>
-    </div>
+
   </form>
+
 </ion-content>
